--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>КАЛЬКУЛЯТОР ЦЕНЫ</title>
+    <!-- <img src="calc_gd.png" alt=""> -->
 </head>
-<body>
+<body id="body">
     <div class="container">
         <h1>КАЛЬКУЛЯТОР ЦЕН</h1>
         <div class="content">
