--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <div class="content-title">
                 <h2>Цена продажи :</h2>
             </div>
-            <div><input id="price" type="number" name=""></div>
-            <div><input id="result" type="number" name="" disabled></div>
+            <div><input placeholder="Цена закупки..." id="price" type="number" name=""></div>
+            <div><input placeholder="Цена продажи..." id="result" type="text" name="" disabled></div>
         </div>
         <button id="submit">ПОСЧИТАТЬ</button>
     </div>
