add PERCENT feature

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             <div><input placeholder="Цена продажи..." id="result" type="text" name="" disabled></div>
         </div>
         <button id="submit">ПОСЧИТАТЬ</button>
+        <button id="percent">НАЦЕНКА</button>
+        <div class="percent__result display__none"></div>
     </div>
     <script src="script.js"></script>
 </body>
