--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>КАЛЬКУЛЯТОР ЦЕНЫ</title>
-    <!-- <img src="calc_gd.png" alt=""> -->
+    <link rel="logo" href="calc_gd.png">
 </head>
 <body id="body">
     <div class="container">
         <h1>КАЛЬКУЛЯТОР ЦЕН</h1>
         <div class="content">
             <div class="content-title">
-                <h2>Введите цену закупки :</h2>
+                <h2>Цена закупки :</h2>
             </div>    
             <div class="content-title">
                 <h2>Цена продажи :</h2>
