--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="logo" href="calc_gd.png">
 </head>
 <body id="body">
+    <div class="big-result" >
+        <h1 class="big-result__text display__none"></h1>
+    </div>
     <div class="container">
         <h1>КАЛЬКУЛЯТОР ЦЕН</h1>
         <div class="content">
@@ -23,6 +26,7 @@
         </div>
         <button id="submit">ПОСЧИТАТЬ</button>
         <button id="percent">НАЦЕНКА</button>
+        <button disabled id="big-result">ИТОГО</button>
         <div class="percent__result display__none"></div>
     </div>
     <script src="script.js"></script>
