--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
             <div><input placeholder="Цена закупки..." id="price" type="number" name=""></div>
             <div><input placeholder="Цена продажи..." id="result" type="text" name="" disabled></div>
         </div>
-        <button id="submit">ПОСЧИТАТЬ</button>
-        <button id="percent">НАЦЕНКА</button>
-        <button disabled id="big-result">ИТОГО</button>
+        <div class="buttons">
+            <button id="submit">ПОСЧИТАТЬ</button>
+            <button id="percent">НАЦЕНКА</button>
+            <button disabled id="big-result">ИТОГО</button>
+        </div>
         <div class="percent__result display__none"></div>
     </div>
     <script src="script.js"></script>
