--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
     <div class="big-result" >
         <h1 class="big-result__text display__none"></h1>
     </div>
+    <div class="percentage-value">
+        <div class="percentage-value_btn"></div>
+        <ul class="percentage-value_list display__none">
+            <li>от 1 до 50 рублей - <span>204%</span></li>
+            <li>от 50 до 150 рублей - <span>84%</span></li>
+            <li>от 150 до 400 рублей - <span>59%</span></li>
+            <li>от 400 до 800 рублей - <span>49%</span></li>
+            <li>от 800 до 1200 рублей - <span>44%</span></li>
+            <li>от 1200 до 2000 рублей - <span>39%</span></li>
+            <li>от 2000 до 3000 рублей - <span>34%</span></li>
+            <li>от 3000 до 4000 рублей - <span>32%</span></li>
+            <li>от 4000 до 5000 рублей - <span>29%</span></li>
+            <li>от 5000 до 7000 рублей - <span>27%</span></li>
+            <li>от 7000 до 15000 рублей - <span>24%</span></li>
+            <li>от 15000 - <span>15%</span></li>
+        </ul>
+    </div>
     <div class="container">
         <h1>КАЛЬКУЛЯТОР ЦЕН</h1>
         <div class="content">
