--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="big-result" >
         <h1 class="big-result__text display__none"></h1>
     </div>
-    <div class="percentage-value">
-        <div class="percentage-value_btn"></div>
-        <ul class="percentage-value_list display__none">
+    <div class="percentage-value_btn"></div>
+    <div class="percentage-value  hidden">
+        <ul class="percentage-value_list">
             <li>от 1 до 50 рублей - <span>204%</span></li>
             <li>от 50 до 150 рублей - <span>84%</span></li>
             <li>от 150 до 400 рублей - <span>59%</span></li>
