--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
             <div class="content-title">
                 <h2>Цена продажи :</h2>
             </div>
-            <div><input placeholder="Цена закупки..." id="price" type="number" name=""></div>
+            <div class="input-box">
+                <input placeholder="Цена закупки..." id="price" type="password" name="">
+                <div class="show-button"></div>
+            </div>
             <div><input placeholder="Цена продажи..." id="result" type="text" name="" disabled></div>
         </div>
         <div class="buttons">
