--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li>от 15000 - <span>15%</span></li>
         </ul>
     </div>
-    <div class="container">
+    <div class="container" onclick="hideList()">
         <h1>КАЛЬКУЛЯТОР ЦЕН</h1>
         <div class="content">
             <div class="content-title">
