--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>КАЛЬКУЛЯТОР ЦЕНЫ</title>
-    <link rel="logo" href="calc_gd.png">
+    <link rel="logo" href="191110.png">
 </head>
 <body id="body">
     <div class="big-result" >
