--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="buttons">
             <button id="percent">НАЦЕНКА</button>
             <button disabled id="big-result">ИТОГО</button>
-            <button id="hide">НЕ ПОКАЗЫВАТЬ</button>
+            <button class="hide-button" id="hide">ПРЯЧЕМ</button>
         </div>
         <div class="percent__result display__none"></div>
     </div>
